--- a/src/main/resources/com/group/p2_socializer/register_form.fxml
+++ b/src/main/resources/com/group/p2_socializer/register_form.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXPasswordField?>
 <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Users.RegisterFormController">
    <children>
       <Label alignment="CENTER" prefHeight="58.0" prefWidth="444.0" text="Welcome To Socializer!" textFill="#0077ff">
@@ -30,16 +32,16 @@
       </Label>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <TextField fx:id="firstNameTextField" prefHeight="25.0" prefWidth="250.0" promptText="First name">
+            <JFXTextField fx:id="firstNameTextField" prefHeight="25.0" prefWidth="250.0" promptText="First name">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </TextField>
-            <TextField fx:id="lastNameTextField" prefHeight="25.0" prefWidth="250.0" promptText="Last name">
+            </JFXTextField>
+            <JFXTextField fx:id="lastNameTextField" prefHeight="25.0" prefWidth="250.0" promptText="Last name">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </TextField>
+            </JFXTextField>
          </children>
          <VBox.margin>
             <Insets bottom="-30.0" />
@@ -47,16 +49,16 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <TextField fx:id="usernameTextField" prefHeight="25.0" prefWidth="250.0" promptText="Username">
+            <JFXTextField fx:id="usernameTextField" prefHeight="25.0" prefWidth="250.0" promptText="Username">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </TextField>
-            <TextField fx:id="emailTextField" prefHeight="25.0" prefWidth="250.0" promptText="Email">
+            </JFXTextField>
+            <JFXTextField fx:id="emailTextField" prefHeight="25.0" prefWidth="250.0" promptText="Email">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </TextField>
+            </JFXTextField>
          </children>
          <VBox.margin>
             <Insets bottom="-30.0" />
@@ -64,16 +66,16 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <PasswordField fx:id="passwordTextField" prefHeight="25.0" prefWidth="250.0" promptText="Password">
+            <JFXPasswordField fx:id="passwordTextField" prefHeight="25.0" prefWidth="250.0" promptText="Password">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </PasswordField>
-            <PasswordField fx:id="rePasswordTextField" prefHeight="25.0" prefWidth="250.0" promptText="Re-enter Password">
+            </JFXPasswordField>
+            <JFXPasswordField fx:id="rePasswordTextField" prefHeight="25.0" prefWidth="250.0" promptText="Re-enter Password">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </PasswordField>
+            </JFXPasswordField>
          </children>
          <VBox.margin>
             <Insets bottom="-30.0" />
@@ -81,16 +83,16 @@
       </HBox>
       <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <TextField fx:id="countryTextField" prefHeight="25.0" prefWidth="250.0" promptText="Country">
+            <JFXTextField fx:id="countryTextField" prefHeight="25.0" prefWidth="250.0" promptText="Country">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </TextField>
-            <TextField fx:id="cityTextField" prefHeight="25.0" prefWidth="250.0" promptText="City">
+            </JFXTextField>
+            <JFXTextField fx:id="cityTextField" prefHeight="25.0" prefWidth="250.0" promptText="City">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
-            </TextField>
+            </JFXTextField>
          </children>
          <VBox.margin>
             <Insets bottom="-30.0" />
