--- a/src/main/resources/com/group/p2_socializer/login_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/login_page.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,21 +12,10 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXPasswordField?>
-<?import com.jfoenix.controls.JFXTextField?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.UserLogIn.LoginController">
    <left>
       <AnchorPane prefHeight="407.0" prefWidth="228.0" style="-fx-background-color: #00bcd4;" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="4.0" layoutY="352.0" prefHeight="17.0" prefWidth="215.0" text="Copyright (c). All Rights Reserved" textFill="WHITE">
-               <font>
-                  <Font name="Arial" size="10.0" />
-               </font>
-               <effect>
-                  <DropShadow />
-               </effect>
-            </Label>
             <ImageView fitHeight="124.0" fitWidth="200.0" layoutX="12.0" layoutY="36.0">
                <image>
                   <Image url="@pictures/logo_login.png" />
@@ -74,18 +63,9 @@
                   <Font name="Arial" size="12.0" />
                </font>
             </Label>
-            <JFXButton fx:id="registerButton"
-                    layoutX="40.0"
-                    layoutY="278.0"
-                    mnemonicParsing="false"
-                    onAction="#onRegisterButtonClick"
-                    prefHeight="31.0"
-                    prefWidth="228.0"
-                    style="-fx-background-color: #00bcd4;"
-                    text="New User? (Create Account)"
-                    textFill="WHITE">
+            <JFXButton fx:id="registerButton" layoutX="40.0" layoutY="278.0" mnemonicParsing="false" onAction="#onRegisterButtonClick" prefHeight="31.0" prefWidth="228.0" style="-fx-background-color: #00bcd4;" text="New User? (Create Account)" textFill="WHITE">
                <effect>
-                  <DropShadow/>
+                  <DropShadow />
                </effect>
             </JFXButton>
             <Label fx:id="loginMessage" alignment="CENTER" layoutX="43.0" layoutY="93.0" prefHeight="18.0" prefWidth="225.0" textFill="#ff3131" />
