--- a/src/main/resources/com/group/p2_socializer/profile_item.fxml
+++ b/src/main/resources/com/group/p2_socializer/profile_item.fxml
@@ -2,18 +2,22 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.BoxBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:controller="com.group.p2_socializer.Utils.ProfileItemController" fx:id="profileVBox" prefHeight="0.0" prefWidth="68.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="profileVBox" prefHeight="0.0" prefWidth="68.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Utils.ProfileItemController">
    <children>
       <VBox maxWidth="0.0" prefHeight="73.0" prefWidth="72.0">
          <children>
-            <ImageView fx:id="profilePic" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" >
+            <ImageView fx:id="profilePic" fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image fx:id="image" url="@pictures/Poster-sized_portrait_of_Barack_Obama-modified.png" />
                </image>
+               <effect>
+                  <BoxBlur iterations="3" />
+               </effect>
             </ImageView>
             <Label fx:id="profileNameLabel" alignment="CENTER" prefHeight="17.0" prefWidth="67.0" text="B.O" />
          </children>
