--- a/src/main/resources/com/group/p2_socializer/profile_page.fxml
+++ b/src/main/resources/com/group/p2_socializer/profile_page.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.DropShadow?>
@@ -19,14 +19,6 @@
    <children>
       <AnchorPane layoutY="-2.0" prefHeight="781.0" prefWidth="238.0" style="-fx-background-color: #66FCFF;">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="16.0" layoutY="750.0" prefHeight="17.0" prefWidth="215.0" text="Copyright (c). All Rights Reserved" textFill="WHITE">
-               <font>
-                  <Font name="Arial" size="10.0" />
-               </font>
-               <effect>
-                  <DropShadow />
-               </effect>
-            </Label>
             <VBox alignment="CENTER" layoutY="43.0" prefHeight="358.0" prefWidth="246.0" style="-fx-spacing: 5;">
                <children>
                   <ImageView fx:id="profilePic" fitHeight="150.0" fitWidth="200.0" onMouseDragOver="#hoverOverProfilePic" pickOnBounds="true" preserveRatio="true">
@@ -49,27 +41,12 @@
                               <DropShadow />
                            </effect>
                         </Label>
-                        <Label fx:id="profileLocation" alignment="CENTER" prefHeight="17.0" prefWidth="214.0" text="Copenhagen, Denmark" textFill="#f8f8f8">
-                           <font>
-                              <Font name="Arial Italic" size="12.0" />
-                           </font>
-                           <effect>
-                              <DropShadow />
-                           </effect>
-                        </Label>
                      </children>
                   </VBox>
                   <VBox alignment="TOP_CENTER" prefHeight="162.0" prefWidth="246.0">
                      <children>
-                        <HBox alignment="CENTER" prefHeight="38.0" prefWidth="246.0" style="-fx-spacing: 5;">
-                           <children>
-                              <Button fx:id="addUserAsFriend" alignment="TOP_CENTER" mnemonicParsing="false" text="+Add friend" />
-                              <Button fx:id="applaudUser" alignment="TOP_CENTER" mnemonicParsing="false" style="-fx-background-color: limegreen;" text="Applaud" />
-                           </children>
-                        </HBox>
-                        <Button fx:id="inviteToGathering" alignment="TOP_CENTER" mnemonicParsing="false" text="Invite to gathering" />
+                        <HBox alignment="CENTER" prefHeight="38.0" prefWidth="246.0" style="-fx-spacing: 5;" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="21.0" opacity="0.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-                        <Button fx:id="reportUser" alignment="TOP_CENTER" mnemonicParsing="false" style="-fx-background-color: salmon;" text="Report" />
                      </children>
                   </VBox>
                </children>
@@ -108,6 +85,7 @@
                   </HBox>
                </children>
             </VBox>
+            <JFXButton fx:id="deleteAccountButton" layoutX="63.0" layoutY="730.0" prefHeight="25.0" prefWidth="123.0" text="Delete account" textFill="RED" />
          </children>
          <effect>
             <DropShadow />
