--- a/src/main/resources/com/group/p2_socializer/discover_tab.fxml
+++ b/src/main/resources/com/group/p2_socializer/discover_tab.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
@@ -12,9 +13,9 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="discoverAnchorPane" minHeight="0.0" minWidth="0.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Tabs.DiscoverTabController" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+<AnchorPane fx:id="discoverAnchorPane" minHeight="0.0" minWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.group.p2_socializer.Tabs.DiscoverTabController">
    <children>
-      <BorderPane  minHeight="0.0" minWidth="0.0" prefHeight="800.0" prefWidth="1000.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <BorderPane minHeight="0.0" minWidth="0.0" prefHeight="800.0" prefWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
             <VBox prefHeight="0" prefWidth="200.0" style="-fx-border-style: solid;" BorderPane.alignment="CENTER">
                <children>
@@ -39,6 +40,15 @@
                   <JFXCheckBox prefHeight="47.0" prefWidth="200.0" />
                   <JFXCheckBox prefHeight="47.0" prefWidth="200.0" />
                   <JFXCheckBox prefHeight="47.0" prefWidth="200.0" />
+                  <VBox alignment="BOTTOM_LEFT" prefHeight="347.0" prefWidth="201.0">
+                     <children>
+                        <JFXButton fx:id="syncPageButton" text="Sync. page">
+                           <graphic>
+                              <MaterialIconView glyphName="SYNC" size="25" />
+                           </graphic>
+                        </JFXButton>
+                     </children>
+                  </VBox>
                </children>
                <padding>
                   <Insets left="9.0" />
@@ -46,9 +56,9 @@
             </VBox>
          </left>
          <center>
-            <ScrollPane fx:id="discoverScrollPane" hbarPolicy="NEVER" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER" prefHeight="800.0" maxHeight="${discoverAnchorPane.height}">
+            <ScrollPane fx:id="discoverScrollPane" hbarPolicy="NEVER" maxHeight="${discoverAnchorPane.height}" prefHeight="800.0" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" >
+                  <AnchorPane minHeight="0.0" minWidth="0.0">
                      <children>
                         <VBox fx:id="gatheringItemVBox" layoutX="3.0" layoutY="6.0">
                            <padding>
