--- a/src/main/resources/com/group/p2_socializer/manager_bar.fxml
+++ b/src/main/resources/com/group/p2_socializer/manager_bar.fxml
@@ -13,7 +13,7 @@
          </HBox.margin>
       </FontAwesomeIconView>
       <JFXButton fx:id="editEventButton" prefHeight="29.0" prefWidth="78.0" text="Edit event" />
-      <JFXButton fx:id="postNewsButton" prefHeight="29.0" prefWidth="78.0" text="Post news" />
+      <JFXButton fx:id="postNewsButton" onAction="#handlePostNewsButton" prefHeight="29.0" prefWidth="78.0" text="Post news" />
       <JFXButton fx:id="cancelButton" prefHeight="29.0" prefWidth="73.0" text="Cancel" />
       <JFXButton fx:id="deleteButton" prefHeight="25.0" prefWidth="74.0" ripplerFill="RED" text="Delete" textFill="RED">
          <HBox.margin>
