--- a/src/main/resources/com/group/p2_socializer/create_gathering.fxml
+++ b/src/main/resources/com/group/p2_socializer/create_gathering.fxml
@@ -70,7 +70,7 @@
                   </JFXTextField>
                </children>
             </HBox>
-            <Label prefHeight="24.0" prefWidth="100.0" text="Gathering description:">
+            <Label prefHeight="24.0" prefWidth="200" text="Gathering description:">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
@@ -110,7 +110,7 @@
                   <Insets left="200.0" right="200.0" top="20.0" />
                </VBox.margin>
             </JFXButton>
-            <HBox alignment="CENTER" prefHeight="95.0" prefWidth="490.0">
+            <HBox fx:id="createGatheringButtonHBox" alignment="CENTER" prefHeight="95.0" prefWidth="490.0">
                <children>
                   <JFXButton fx:id="createGatheringButton" onAction="#handleCustomCreation" prefHeight="61.0" prefWidth="138.0" style="-fx-background-color: #41FF31;" text="Create Gathering" />
                </children>
